syntax = "proto3";

package com.project.common.proto;

option java_multiple_files = true;
option java_package = "com.project.common.proto";
option java_outer_classname = "LoadTestProto";

// Controller -> Agent 명령
service AgentService {
  // 테스트 시작 명령
  rpc StartTest (TestConfig) returns (Ack);
  // 테스트 중단
  rpc StopTest (TestId) returns (Ack);
  // 헬스 체크
  rpc Ping (Empty) returns (Pong);
}

// Agent -> Controller 보고
service ReportService {
  // 실시간 통계 전송
  rpc StreamStats (stream TestStat) returns (Ack);
}

message TestConfig {
  string testId = 1;
  string targetUrl = 2;
  int32 virtualUsers = 3; // 동시 접속자 수
  int32 durationSeconds = 4; // 테스트 지속 시간
  string httpMethod = 5;
  map<string, string> headers = 6; // HTTP 헤더
  map<string, string> queryParams = 7; // Query Parameters
  string requestBody = 8; // Request Body (JSON 등)
  int32 rampUpSeconds = 9; // Ramp-up 시간 (0 = 즉시 시작)
}

message TestStat {
  string testId = 1;
  int64 timestamp = 2;
  int32 activeUsers = 3;
  int32 requestsPerSecond = 4; // TPS
  double avgLatencyMs = 5; // 평균 응답 속도
  double p50LatencyMs = 6; // 50th percentile (median)
  double p95LatencyMs = 7; // 95th percentile
  double p99LatencyMs = 8; // 99th percentile
  int32 errorCount = 9;
}

message TestId { string id = 1; }
message Ack { bool success = 1; string message = 2; }
message Empty {}
message Pong { bool alive = 1; }