package com.ch.hammerscale.controller.infrastructure.grpc

import com.ch.hammerscale.controller.domain.port.out.TestMetricRepository
import com.project.common.proto.Ack
import com.project.common.proto.ReportServiceGrpcKt
import com.project.common.proto.TestStat
import kotlinx.coroutines.flow.Flow
import kotlinx.coroutines.flow.buffer
import kotlinx.coroutines.flow.catch
import net.devh.boot.grpc.server.service.GrpcService
import org.slf4j.LoggerFactory

@GrpcService
class ReportServiceGrpcImpl(
    private val testMetricRepository: TestMetricRepository
) : ReportServiceGrpcKt.ReportServiceCoroutineImplBase() {

    private val logger = LoggerFactory.getLogger(ReportServiceGrpcImpl::class.java)

    private companion object {
        const val BATCH_SIZE = 10
    }

    override suspend fun streamStats(
        requests: Flow<TestStat>
    ): Ack {
        logger.info("[Report] í†µê³„ ìŠ¤íŠ¸ë¦¼ ìˆ˜ì‹  ì‹œì‘")

        try {
            var totalProcessed = 0
            var totalSaved = 0
            val batch = mutableListOf<TestStat>()

            requests
                .buffer()
                .catch { e ->
                    // ìŠ¤íŠ¸ë¦¼ ë ˆë²¨ ì—ëŸ¬ ì²˜ë¦¬ - ìŠ¤íŠ¸ë¦¼ì´ ëŠê¸°ì§€ ì•Šë„ë¡
                    logger.error("[Report] ìŠ¤íŠ¸ë¦¼ ì²˜ë¦¬ ì¤‘ ì˜¤ë¥˜ ë°œìƒ: ${e.message}", e)
                    throw e
                }
                .collect { stat ->
                    logger.info(
                        "[Report] TestID: ${stat.testId} | " +
                        "TPS: ${stat.requestsPerSecond} | " +
                        "Avg Latency: ${stat.avgLatencyMs}ms | " +
                        "Errors: ${stat.errorCount} | " +
                        "Active Users: ${stat.activeUsers}"
                    )

                    if (stat.errorCount > 0) {
                        logger.warn("ğŸ”´ [Warning] Error Detected! TestID: ${stat.testId}, Error Count: ${stat.errorCount}")
                    }

                    if (stat.avgLatencyMs > 1000) {
                        logger.warn("ğŸŸ  [Warning] High Latency! TestID: ${stat.testId}, Avg Latency: ${stat.avgLatencyMs}ms")
                    }

                    totalProcessed++
                    batch.add(stat)

                    // ë°°ì¹˜ í¬ê¸°ì— ë„ë‹¬ -> InfluxDBì— ì €ì¥
                    if (batch.size >= BATCH_SIZE) {
                        try {
                            testMetricRepository.saveMetrics(batch.toList())
                            totalSaved += batch.size
                            logger.debug("[Report] ë°°ì¹˜ ì €ì¥ ì™„ë£Œ - Size: ${batch.size}, Total Saved: $totalSaved")
                            batch.clear()
                        } catch (e: Exception) {
                            // ë°°ì¹˜ ì €ì¥ ì‹¤íŒ¨í•´ë„ ìŠ¤íŠ¸ë¦¼ì€ ê³„ì† ì§„í–‰
                            logger.error(
                                "[Report] ë°°ì¹˜ ì €ì¥ ì‹¤íŒ¨ (ìŠ¤íŠ¸ë¦¼ ê³„ì† ì§„í–‰) - " +
                                "Batch Size: ${batch.size}, Error: ${e.message}",
                                e
                            )
                            batch.clear() // ì‹¤íŒ¨í•´ë„ ë°°ì¹˜ëŠ” ì´ˆê¸°í™”
                        }
                    }
                }

            // ë‚¨ì€ ë©”íŠ¸ë¦­ ì €ì¥
            if (batch.isNotEmpty()) {
                try {
                    testMetricRepository.saveMetrics(batch)
                    totalSaved += batch.size
                    logger.debug("[Report] ë§ˆì§€ë§‰ ë°°ì¹˜ ì €ì¥ ì™„ë£Œ - Size: ${batch.size}, Total Saved: $totalSaved")
                } catch (e: Exception) {
                    logger.error(
                        "[Report] ë§ˆì§€ë§‰ ë°°ì¹˜ ì €ì¥ ì‹¤íŒ¨ - " +
                        "Batch Size: ${batch.size}, Error: ${e.message}",
                        e
                    )
                }
            }

            logger.info(
                "[Report] í†µê³„ ìŠ¤íŠ¸ë¦¼ ìˆ˜ì‹  ì™„ë£Œ - " +
                "Total Processed: $totalProcessed, Total Saved: $totalSaved"
            )

            return Ack.newBuilder()
                .setSuccess(true)
                .setMessage("Statistics stream processed successfully. Processed: $totalProcessed, Saved: $totalSaved")
                .build()

        } catch (e: Exception) {
            logger.error("[Report] í†µê³„ ìŠ¤íŠ¸ë¦¼ ì²˜ë¦¬ ì¤‘ ì¹˜ëª…ì  ì˜¤ë¥˜ ë°œìƒ: ${e.message}", e)

            return Ack.newBuilder()
                .setSuccess(false)
                .setMessage("Failed to process statistics stream: ${e.message}")
                .build()
        }
    }
}

